main.css
@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');

/* reset */
* {
    box-sizing: border-box;
    overflow: none;
    max-height: 100%;
    max-width: 100%;
    padding: 0;
    margin: 0;
    border: 0;
    font-size: 100%;
}

/* varaiables */ 
:root {
    --h2-size: 3.6rem;
    --h3-color: #7D83FD;
    --h3-size: 4.8rem;
    --btn-color: #6500E7;
    --border-color: rgb(54, 54, 54);
    --icon-color: rgb(54, 54, 54);
    --project-card-color: #E5E5E5;
    --header-font: 'Red Hat Display';
    

}

/* global Stlyes */
html {
    font-size: 10px;
}

body {
    font-family: roboto, 'Red Hat Display', Helvetica;
}
h1 {
font-size: 14.4rem;
font-family: var(--header-font), roboto, Helvetica;
color: var(--icon-color);
width: 60%;
margin:-2% 0 5% 0;
}

h2 {
font-size: var(--h2-size);
color: white;
margin: 1% 0 10% 0;
width: 100%;
}

h3 {
font-size: var(--h3-size);
color: var(--h3-color);
border-left: 5px solid var(--border-color);
padding-left: 1%;
}

p {
    font-size: 1.8rem;
    font-weight: bold;
}

a {
    font-size: 2.4rem;
    color: white;
}


/* specific Styles */
.home-wrapper {
    height: 100vh;
    width: 100vw;
    padding-top: 2%;
    background-image: linear-gradient(to right, #7D83FD, #742BBE);
}

nav {
    text-align: right;
    margin: 1% 5% 5% 0;
}

nav a {
    font-size: 2rem;
    padding-left: 2%;
    cursor: pointer;
}

.headings-container {
    width: 80%;
    height: 70rem;
    margin: 0 0 0 10%;
}

.btn-container {
    width: 95%;
    display: flex;
    
}

.btn {
    text-align: center;
    display: inline-block;
    background-color: var(--btn-color);
    width: 30rem;
    height: 5rem;
    border-radius: 30px;
    cursor: pointer;
}

.btn p {
    margin: 5% auto;
}

.btn:nth-of-type(2){
    margin-left: 6%;
}

.body-wrapper {
    padding: 5% 5%;
}

#about {
    position: relative;
    box-shadow: 1px 1px 20px -12px rgba(0,0,0,0.75);
    margin: 11% auto;
    height: 35rem;
    width: 90%;
    padding: 5%;
}

#about p {
    margin: 3% auto;
}

#about:nth-child(2){
    line-height:1.5
}

#about a p {
    margin-top: 5%;
}

#about a {
    cursor: pointer;
}
.headshot {
    position: absolute;
    display: block;
    background-color: grey;
    height: 18rem;
    width: 18rem;
    margin-bottom: 3rem;
    border-radius: 50%;
    bottom: 27rem;
    right: 1rem;
}
.contact-info-container {
    display: flex;
    justify-content: space-between;
    margin-top: 3.9rem;
}

.icon-container i{
    padding-right: 3rem;
    
}

.icon-container .fab {
    color: black;
    margin-top: .3rem;
    font-size: 4rem;
    
}

h3:nth-of-type(2){
    display: inline-block;
    border-bottom: 5px solid var(--border-color);
    border-left: none;
}

h3:nth-of-type(3){
    display: inline-block;
    margin-left: 55%;
    border-bottom: 5px solid var(--border-color);
    border-left: none;
}

.skill-tools-container{
    position: relative;
    display: flex;
    justify-content: space-around;
    height: 50rem;
    width: 100%;
    margin-top: 5%;
}

.skills {
    display: flex;
    width: 45%;
    flex-wrap: wrap;
}

.skills::after {
    content: '';
    position: absolute;
    z-index: -100;
    background-color: #7D83FD;
    height: 95%;
    width: 40%;
    left: 5%;
    bottom: 10%;
    
}


.skills-card {
    padding: 5%;
    width: 30%;
    margin: .5rem auto;
    text-align: center;
    box-shadow: 1px 1px 20px -12px rgba(0,0,0,0.75);
    border-radius: 5%;
    background-color: white;
    font-size: 1.4rem;
}

.skills-card p {
    font-size: 1.4rem;
}

.tools {
    display: flex;
    flex-wrap: wrap;
    width: 30%;
}

.tools::after {
    content: '';
    position: absolute;
    z-index: -100;
    background-color: #7D83FD;
    height: 95%;
    width: 25%;
    left: 70%;
    bottom: -4%;
    
}

.tools-card {
    width: 45%;  
    margin: .5rem auto;
    text-align: center;
    box-shadow: 1px 1px 20px -12px rgba(0,0,0,0.75);
    border-radius: 5%;
    background-color: white;
}

.tools-card p {
    font-size: 1.4rem;
}

.skill-tools-container i {
    font-size: 5rem;
    margin-bottom: 35%;
}

.skill-tools-container .ficon  {
    font-size: 2rem;
    font-weight: bolder;
    margin-bottom: 60%;
}



.projects {
    margin-top: 10%;
}

